# tree-sitter-antlers

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  check_tests.sh  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  sample.antlers.html  setup.py  tree-sitter.json
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  editor_integration.md  feature_request.md
bindings/c/: tree-sitter-antlers.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_antlers/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAntlersTests/: TreeSitterAntlersTests.swift
queries/: folds.scm  highlights.scm  indents.scm  tags.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: arithmetic.txt  basic-syntax.txt  boolean-logic.txt  collection-loops.txt  comments.txt  control-structures.txt  navigation.txt  strings-numbers.txt  taxonomy-forms.txt  whitespace.txt
